2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add in "get_db_all_rows_filter" new parameter
	$returnSQL for return the string formated SQL instead the data. And add new
	function "get_db_all_row_by_steps_sql" that return row by row the data of
	query.
	
	* operation/events/export_csv.php: fixed the memory overload when try save
	into CSV a 10000 events or more, now use "get_db_all_row_by_steps_sql" for
	extract row by row the data.
	Fixes: 2859758

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events.php: fix notice undefined var message.

2009-12-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php, operation/agentes/tactical.php: fix notice
	undefined var message.

2009-12-07	Pablo de la Concepcipón <pablo.concepcion@artica.es>
	* Changelog: Changelog with the last changes that I forgot to include in 
	the last commit.

2009-12-07	Pablo de la Concepcipón <pablo.concepcion@artica.es>
	* include/functions_api.php, include/functions.php,
	extensions/plugin_registration.php, operation/events/events.php,
	operation/agentes/exportdata.php, operation/agentes/stat_win.php,
	godmode/setup/setup.php, godmode/agentes/configurar_agente.php,
	godmode/agentes/agent_manager.php, godmode/reporting/reporting_builder.php,
	godmode/reporting/map_builder.php, godmode/reporting/graphs.php,
	godmode/reporting/graph_builder.php, godmode/alerts/alert_list.php: English
	text strings updated to be more clear.

	* include/languages/index.pot: Regenerated with updated strings

2009-12-07  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_modules.php: in the function "create_agent_module" add
	new parameter $disableACL (by default false) for use in API.
	
	* include/functions_api.php: add new functions for add new features to
	api, functions: "set_new_agent" create agent, "set_delete_agent"
	delete agent, "set_create_network_module" create network module,